<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="5dp">
        <SurfaceView
            android:id="@+id/surfaceView_top"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/url_push"
            android:textColor="@color/white"
            android:hint="@string/hint_rtmp_push"
            android:textColorHint="@color/gray"
            android:gravity="center"
            android:layout_margin="10dp"
            android:theme="@style/EditTextStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center"
            >

            <Button
                android:text="@string/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_start_stop"
                android:background="@color/colorAccent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_marginRight="10dp"
                android:theme="@style/ButtonStyle"/>

            <Button
                android:id="@+id/switch_camera"
                android:text="@string/switch_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:theme="@style/ButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp">
        <cn.nodemedia.NodePlayerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/surfaceView_bottom"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/url_pull"
            android:textColor="@color/white"
            android:hint="@string/hint_rtmp_pull"
            android:textColorHint="@color/gray"
            android:gravity="center"
            android:layout_margin="10dp"
            android:theme="@style/EditTextStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center"
            >
            <Button
                android:text="@string/start_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_pull"
                android:background="@color/colorAccent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:theme="@style/ButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
